templates/mediawiki_template.yaml
---
# Source: mediawiki/templates/networkpolicy.yaml.tpl
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mediawiki-release-name  
  labels:
    app: mediawiki
    chart: mediawiki-0.6.26
    release: release-name
    heritage: Helm
  
spec:
  podSelector:
    matchLabels:
      app: mediawiki
      release: release-name
  policyTypes:
    - Ingress
  ingress:
    - ports:
      - port: 8080
        protocol: TCP
---
# Source: mediawiki/templates/service.yaml.tpl
apiVersion: v1
kind: Service
metadata:
  name: mediawiki-release-name
  labels:  
  labels:
    app: mediawiki
    chart: mediawiki-0.6.26
    release: release-name
    heritage: Helm
  
spec:
  type: NodePort
  selector:
    app: mediawiki
    routed_via: release-name
  ports:
    - name: http
      targetPort: 8080
      port: 8080
---
# Source: mediawiki/templates/deployment.yaml.tpl
apiVersion: apps/v1
kind: Deployment
metadata:
  name: default.local.release-name  
  labels:
    app: mediawiki
    chart: mediawiki-0.6.26
    release: release-name
    heritage: Helm
  
spec:
  selector:
    matchLabels:
      app: mediawiki
      release: release-name
  replicas: 1
  strategy:
      rollingUpdate:
        maxSurge: 3%
        maxUnavailable: 3%
      type: RollingUpdate
  template:
    metadata:
      labels:
        app: mediawiki
        release: release-name
        deployment: default
        routed_via: release-name
      annotations:
        checksum/sites: 218b79fd1729dcbe75e29db7dcaff6e47a8a729a036e4f787a9f75960d97a4e3        
        
    spec:
      # TODO: add affinity rules to ensure even distribution across rows
      terminationGracePeriodSeconds: 10
      containers:        
        
        ### The apache httpd container
        # TODO: set up logging. See T265876
        # TODO: fix virtualhosts in puppet so that the port is set to APACHE_RUN_PORT
        - name: mediawiki-release-name-httpd
          image: docker-registry.wikimedia.org/latest
          imagePullPolicy: IfNotPresent
          ports:
          - name: httpd
            containerPort: 8080
          # PHP monitoring port
          - name: php-metrics
            containerPort: 9181
          livenessProbe:
            tcpSocket:
              port: httpd
          readinessProbe:
            httpGet:
              # this is the simplest php script you can think of - it just returns OK.
              # This way, we're just testing that apache + php-fpm are ready.
              # mcrouter, if enabled, should have its own readiness probe probably.
              path: /healthz
              port: php-metrics
        
          lifecycle:
            preStop:
              exec:
                command:
                - "/bin/sh"
                - "-c"
                - "sleep 8"
          resources:
            requests:
              cpu: 200m
              memory: 600Mi
            limits:
              cpu: 1
              memory: 800Mi
          volumeMounts:
          # Note: we use subpaths here. Given subpaths are implemented with bind mounts,
          # they won't be updated when the configmap is updated.
          # This is ok because we're re-deploying the pods when that happens.
          - name: mediawiki-release-name-httpd-sites
            mountPath: /etc/apache2/sites-enabled/01-wikipedia.local.conf
            subPath: 01-wikipedia.local.conf
          - name: mediawiki-release-name-httpd-sites
            mountPath: /etc/apache2/sites-enabled/02-static.conf
            subPath: 02-static.conf
        ### The MediaWiki container
        - name: mediawiki-release-name-app
          image: docker-registry.wikimedia.org/placeholder-for-mediawiki-image-name
          imagePullPolicy: IfNotPresent
        
          lifecycle:
            preStop:
              exec:
                command:
                - "/bin/sh"
                - "-c"
                - "sleep 8"
          livenessProbe:
            tcpSocket:
              port: 9000
            initialDelaySeconds: 1
            periodSeconds: 5
          resources:
            requests:
              cpu: 1000m
              memory: 3500Mi
            limits:
              cpu: 2000m
              memory: 4000Mi
          volumeMounts:
          # TODO: use an env variable for this.
          - name: mediawiki-release-name-wikimedia-cluster
            mountPath: /etc/wikimedia-cluster
            subPath: wikimedia-cluster
          # GeoIP data
          - name: mediawiki-release-name-geoip
            mountPath: /usr/share/GeoIP/
            readOnly: true
          - name: mediawiki-release-name-geoipinfo
            mountPath: /usr/share/GeoIPInfo/
            readOnly: true
                                
                
      volumes:        
        
        # Apache sites
        - name: mediawiki-release-name-httpd-sites
          configMap:
            name: mediawiki-release-name-httpd-sites-config
        # Datacenter
        - name: mediawiki-release-name-wikimedia-cluster
          configMap:
            name: mediawiki-release-name-wikimedia-cluster-config
        # TLS configurations
        # GeoIP data
        - name: mediawiki-release-name-geoip
          hostPath:
            path: /usr/share/GeoIP
        - name: mediawiki-release-name-geoipinfo
          hostPath:
            path: /usr/share/GeoIPInfo
---
# Source: mediawiki/templates/ingress.yaml.tpl
---
